Bug 184507 - toolbar: cannot add composer custom template any longer (regression)
Summary: toolbar: cannot add composer custom template any longer (regression)
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: templates (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-16 12:14 UTC by Maciej Pilichowski
Modified: 2012-11-19 07:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maciej Pilichowski 2009-02-16 12:14:33 UTC
Version:            (using KDE 4.2.0)
Installed from:    SuSE RPMs

I defined several custom templates for composer and put them on toolbar. Now (in KDE4) I cannot do this, I checked the toolbar by name of the templates and also by "reply <name>".
Comment 1 Jaime Torres 2009-02-16 20:59:36 UTC
Confirmed in kmail 1.11.90 (kde 4.2.62).
Comment 2 Laurent Montel 2012-11-19 07:58:46 UTC
Git commit f43b45bde43553bb05ab5a334deacfb00210bbb6 by Montel Laurent.
Committed on 19/11/2012 at 08:58.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 184507 - toolbar: cannot add composer custom template any longer

(regression)
FIXED-IN: 4.9.4

M  +8    -0    templateparser/customtemplatesmenu.cpp

http://commits.kde.org/kdepim/f43b45bde43553bb05ab5a334deacfb00210bbb6