Fix Bug 184507 - toolbar: cannot add composer custom template any longer

(regression)
FIXED-IN: 4.9.4
BUG: 184507